# ns_getopt

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.py  conanfile.py
.travis/: run.sh
cmake/: ns_getoptConfig.cmake.in
example/: custom_buffer.cpp  main.cpp  main01.cpp  main02.cpp  main03.cpp  main04.cpp  ns_getopt_example.cpp
examples/: custom_buffer.cpp  ns_getopt_example.cpp
include/: modern_getopt.h  notshit_getopt.h  ns_getopt.h
include/ns_getopt/: ns_getopt.h
tests/: CMakeLists.txt  tests.cpp
